# literal

./: requirements.txt
api/: urls.py  views.py
api/static/api/: styles.css
api/templates/api/: constructor.html  home.html  login.html  register.html
backend/: settings.py  urls.py
crew/src/literal/: crew.py  main.py  report.md
crew/src/literal/config/: request.json
frontend/src/: App.jsx  index.css
literal/: README.md  pyproject.toml
literal/src/literal/: crew.py  main.py
literal/src/literal/config/: tasks.yaml
