[project]
name = "literal"
version = "0.1.0"
description = "literal using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5a2"
]

[project.scripts]
literal = "literal.main:run"
run_crew = "literal.main:run"
train = "literal.main:train"
replay = "literal.main:replay"
test = "literal.main:test"
run_with_trigger = "literal.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
